Update to work with itk-elastix 0.7.0

--- a/Jupyter/webRegistration.ipynb
+++ b/Jupyter/webRegistration.ipynb
@@ -214,9 +214,12 @@
     "    with out:\n",
     "        print('Executing '+regType.value+' registration. Please wait...')\n",
     "    \n",
-    "    appState['result'] = itk.elastix_registration_method(appState['fixed'],\n",
-    "                                                        appState['moving'],\n",
-    "                                                        parameter_object=parameters)\n",
+    "    appState['result'], params = itk.elastix_registration_method(appState['fixed'],\n",
+    "                                                                 appState['moving'],\n",
+    "                                                                 parameter_object=parameters,\n",
+    "                                                                 log_to_file=True,\n",
+    "                                                                 log_file_name=\"elx_HASI.log\",\n",
+    "                                                                 output_directory='.')\n",
     "    \n",
     "    with out:\n",
     "        print('Compressing result image...')\n",
@@ -270,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
