ENH: Reorganized HASI Python module

--- a/examples/MeshToMeshRegistration.ipynb
+++ b/examples/MeshToMeshRegistration.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,49 +103,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Template itk::PyVectorContainer<signedshort>\n",
-      " already defined as <class 'itk.itkPyVectorContainerPython.itkPyVectorContainerSS'>\n",
-      " is redefined as {cl}\n",
-      "Warning: template already defined 'itk::PyVectorContainer<signedshort>'\n",
-      "Template itk::PyVectorContainer<unsignedchar>\n",
-      " already defined as <class 'itk.itkPyVectorContainerPython.itkPyVectorContainerUC'>\n",
-      " is redefined as {cl}\n",
-      "Warning: template already defined 'itk::PyVectorContainer<unsignedchar>'\n",
-      "Template itk::PyVectorContainer<float>\n",
-      " already defined as <class 'itk.itkPyVectorContainerPython.itkPyVectorContainerF'>\n",
-      " is redefined as {cl}\n",
-      "Warning: template already defined 'itk::PyVectorContainer<float>'\n",
-      "Template itk::PyVectorContainer<double>\n",
-      " already defined as <class 'itk.itkPyVectorContainerPython.itkPyVectorContainerD'>\n",
-      " is redefined as {cl}\n",
-      "Warning: template already defined 'itk::PyVectorContainer<double>'\n",
-      "Template itk::PyVectorContainer<unsignedint>\n",
-      " already defined as <class 'itk.itkPyVectorContainerPython.itkPyVectorContainerUI'>\n",
-      " is redefined as {cl}\n",
-      "Warning: template already defined 'itk::PyVectorContainer<unsignedint>'\n",
-      "Template itk::PyVectorContainer<itk::Point<float,2>>\n",
-      " already defined as <class 'itk.itkPyVectorContainerPython.itkPyVectorContainerPF2'>\n",
-      " is redefined as {cl}\n",
-      "Warning: template already defined 'itk::PyVectorContainer<itk::Point<float,2>>'\n",
-      "Template itk::PyVectorContainer<itk::Point<float,3>>\n",
-      " already defined as <class 'itk.itkPyVectorContainerPython.itkPyVectorContainerPF3'>\n",
-      " is redefined as {cl}\n",
-      "Warning: template already defined 'itk::PyVectorContainer<itk::Point<float,3>>'\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42d9dfe94e7a4faca49eb24ea79e0f70",
+       "model_id": "28896761f6a94485b95131a6c102765a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -173,17 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.registration.meshtomeshregistrar import MeshToMeshRegistrar\n",
+    "from src.hasi.hasi.meshtomeshregistrar import MeshToMeshRegistrar\n",
     "registrar = MeshToMeshRegistrar()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,13 +166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "504ecc7781c046c5906f30607aff0a3e",
+       "model_id": "615313a2a584448fb0d8ddec1713256e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -235,16 +201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.registration.meansquaresregistrar import MeanSquaresRegistrar"
+    "from src.hasi.hasi.meansquaresregistrar import MeanSquaresRegistrar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -262,7 +228,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dbf9bbb9d4cc47869b97384e471a89c4",
+       "model_id": "e10ad99a2bec41bf8b19052f51398255",
        "version_major": 2,
        "version_minor": 0
       },
@@ -289,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +264,7 @@
        "0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -641,19 +607,19 @@
       "135 0.0018579354526270543 6.21355527878094e-06\n",
       "135 0.0018581819152827506 6.21355527878094e-06\n",
       "135 0.0018578250026771094 6.21355527878094e-06\n",
-      "135 0.0018578250026771094 6.21355527878094e-06\n"
+      "135 0.0018578250026771094 6.21355527878094e-06\n",
+      "136 0.0018561265960633036 5.262116183299268e-06\n",
+      "136 0.0018561265960633036 5.262116183299268e-06\n",
+      "137 0.0018541785149490267 4.266601313887413e-06\n",
+      "137 0.0018541785149490267 4.266601313887413e-06\n",
+      "138 0.0018488759253997083 5.7777829698971234e-06\n",
+      "138 0.0018488759253997083 5.7777829698971234e-06\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "136 0.0018561265960633036 5.262116183299268e-06\n",
-      "136 0.0018561265960633036 5.262116183299268e-06\n",
-      "137 0.0018541785149490267 4.266601313887413e-06\n",
-      "137 0.0018541785149490267 4.266601313887413e-06\n",
-      "138 0.0018488759253997083 5.7777829698971234e-06\n",
-      "138 0.0018488759253997083 5.7777829698971234e-06\n",
       "139 0.0018488214728622956 8.851509846565252e-06\n",
       "139 0.0018488214728622956 8.851509846565252e-06\n",
       "140 0.0018455469378301228 2.599417286662253e-05\n",
@@ -699,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -707,7 +673,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22c1907774c7480aa667bf61cba2cede",
+       "model_id": "c656c68980d14b0597f40a6b0caba96b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -732,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -749,7 +715,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dfdb21d47b8d4299b3c777ad7bf5bc4c",
+       "model_id": "556bd9eb307c4fa68194ee52f9fce4d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -778,16 +744,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.registration.diffeoregistrar import DiffeoRegistrar"
+    "from src.hasi.hasi.diffeoregistrar import DiffeoRegistrar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,13 +762,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "189e5f59075642f09e7ccee34f2513a1",
+       "model_id": "4689c76cf18e4e32a5e8c45d3cb53aa2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -829,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -839,16 +805,16 @@
      "output_type": "stream",
      "text": [
       "1.7976931348623157e+308\n",
-      "0.03902562456210709\n",
-      "0.03620058111051528\n",
-      "0.033857400476957365\n",
+      "0.039025624562107085\n",
+      "0.03620058111051529\n",
+      "0.03385740047695736\n",
       "0.0316529992799868\n",
-      "0.029671274883454234\n",
-      "0.027863336769245965\n",
+      "0.02967127488345423\n",
+      "0.02786333676924597\n",
       "0.026263721371434446\n",
-      "0.024784571211718676\n",
-      "0.023439112890373832\n",
-      "0.022179969985074027\n",
+      "0.024784571211718686\n",
+      "0.023439112890373825\n",
+      "0.022179969985074023\n",
       "0.021160217575979016\n",
       "0.02022989923756486\n",
       "0.019367058349974004\n",
@@ -857,82 +823,82 @@
       "0.017187661496342346\n",
       "0.01657368277679982\n",
       "0.01599817637581068\n",
-      "0.01545783158564288\n",
+      "0.015457831585642885\n",
       "0.014948025199071284\n",
       "0.014461622847641747\n",
-      "0.014000352105777528\n",
+      "0.014000352105777525\n",
       "0.013558082766414237\n",
       "0.01311751745327867\n",
-      "0.012612455200814072\n",
+      "0.012612455200814074\n",
       "0.012162631078637215\n",
       "0.011740243666151801\n",
       "0.011309865240838799\n",
-      "0.010899203476967512\n",
+      "0.010899203476967509\n",
       "0.010521650813570736\n",
       "0.010196561107985157\n",
-      "0.009891130130343637\n",
-      "0.009600816910980126\n",
-      "0.009315760503390664\n",
+      "0.009891130130343635\n",
+      "0.009600816910980125\n",
+      "0.009315760503390665\n",
       "0.009039516487389243\n",
-      "0.008767196010894807\n",
+      "0.008767196010894804\n",
       "0.008506293948833205\n",
       "0.008248633969299386\n",
       "0.00799543225258579\n",
       "0.0077453645420522965\n",
-      "0.007497301744479739\n",
+      "0.00749730174447974\n",
       "0.007257772289115741\n",
-      "0.007027261536318483\n",
+      "0.007027261536318484\n",
       "0.0068053907333040725\n",
       "0.006592009351901685\n",
-      "0.006385407763355722\n",
-      "0.006188817973227065\n",
-      "0.005999093025599274\n",
+      "0.006385407763355719\n",
+      "0.006188817973227064\n",
+      "0.005999093025599275\n",
       "0.005811112139699502\n",
-      "0.005627719817663615\n",
-      "0.005450013698900427\n",
-      "0.0052764831615054785\n",
+      "0.005627719817663616\n",
+      "0.005450013698900426\n",
+      "0.005276483161505481\n",
       "0.005107718474447619\n",
       "0.004944021699863354\n",
       "0.004784881046850776\n",
       "0.004627403945911204\n",
-      "0.0044726314443229425\n",
+      "0.004472631444322943\n",
       "0.00432708986678605\n",
       "0.004181755611710442\n",
-      "0.004046007042062047\n",
-      "0.003910543564363516\n",
-      "0.0037769288355724152\n",
+      "0.004046007042062048\n",
+      "0.003910543564363515\n",
+      "0.003776928835572415\n",
       "0.003651748774315907\n",
       "0.0035254355563773946\n",
-      "0.003405616627405658\n",
-      "0.003287420844444019\n",
+      "0.0034056166274056584\n",
+      "0.0032874208444440187\n",
       "0.0031766063482686433\n",
-      "0.003073237734183498\n",
-      "0.002966311826059413\n",
+      "0.0030732377341834986\n",
+      "0.0029663118260594124\n",
       "0.0028654978328103895\n",
       "0.0027705034302599975\n",
       "0.0026746611593414884\n",
       "0.002581828293476095\n",
       "0.0024926027552577873\n",
-      "0.002404110050902867\n",
+      "0.0024041100509028675\n",
       "0.0023211537031277334\n",
       "0.0022394923684441784\n",
       "0.0021573903066322564\n",
       "0.0020814704811892046\n",
-      "0.0020060111617612687\n",
+      "0.0020060111617612683\n",
       "0.0019369915179307477\n",
-      "0.0018649415726044623\n",
+      "0.0018649415726044625\n",
       "0.0018017916860055036\n",
-      "0.0017384859107382952\n",
+      "0.0017384859107382948\n",
       "0.0016788831232328189\n",
       "0.0016249236832228252\n",
-      "0.0015726446858505014\n",
-      "0.0015220808485447664\n",
-      "0.001473872265611966\n",
-      "0.0014252690409045168\n",
+      "0.0015726446858505016\n",
+      "0.0015220808485447667\n",
+      "0.0014738722656119662\n",
+      "0.0014252690409045166\n",
       "0.0013813925110105407\n",
       "0.0013371158259658372\n",
       "0.0012945639055305799\n",
-      "0.0012520995758742053\n",
+      "0.001252099575874205\n",
       "0.0012112875077578335\n",
       "0.0011739707910407246\n",
       "0.0011380005543078454\n",
@@ -946,97 +912,97 @@
       "0.0008768690771979427\n",
       "0.0008500828244220042\n",
       "0.0008254308975864035\n",
-      "0.0008010413062407817\n",
+      "0.0008010413062407819\n",
       "0.0007760553272720413\n",
-      "0.0007532113838017458\n",
+      "0.000753211383801746\n",
       "0.000729756847116741\n",
       "0.0007076614714839721\n",
-      "0.0006874866020348998\n",
+      "0.0006874866020348999\n",
       "0.0006662312584093007\n",
       "0.0006451482244339356\n",
-      "0.0006270558498995951\n",
+      "0.000627055849899595\n",
       "0.0006092029421030994\n",
       "0.0005874783028960857\n",
       "0.0005717931942866128\n",
       "0.0005549292888368047\n",
-      "0.0005380478371784953\n",
-      "0.0005201146650359144\n",
+      "0.0005380478371784952\n",
+      "0.0005201146650359145\n",
       "0.0005054419685110467\n",
       "0.0004924934986366237\n",
-      "0.00047739876792524745\n",
-      "0.0004646926340450213\n",
-      "0.00045364436554749896\n",
+      "0.00047739876792524756\n",
+      "0.00046469263404502135\n",
+      "0.0004536443655474988\n",
       "0.0004412859633354016\n",
-      "0.0004284863025930892\n",
-      "0.0004176676388157801\n",
+      "0.00042848630259308915\n",
+      "0.00041766763881578004\n",
       "0.0004072797829573886\n",
       "0.0003959767465342979\n",
       "0.00038491058157508494\n",
       "0.00037565536484099885\n",
-      "0.00036738715164529707\n",
-      "0.00035766935648676824\n",
-      "0.0003478250341790232\n",
+      "0.00036738715164529696\n",
+      "0.0003576693564867682\n",
+      "0.0003478250341790231\n",
       "0.0003392932258692299\n",
       "0.00033114287304467506\n",
-      "0.00032219566225356736\n",
-      "0.0003139991695771231\n",
+      "0.0003221956622535673\n",
+      "0.00031399916957712304\n",
       "0.0003071797291965539\n",
       "0.0003006855530398379\n",
       "0.00029443366939331994\n",
-      "0.00028687203637748737\n",
+      "0.0002868720363774873\n",
       "0.0002807450793450514\n",
-      "0.00027502921601597777\n",
+      "0.0002750292160159778\n",
       "0.0002696259382267158\n",
       "0.00026381029567148877\n",
       "0.00025747523460078786\n",
       "0.00025246120875020776\n",
       "0.00024737284238620174\n",
-      "0.00024211694965375677\n",
+      "0.00024211694965375674\n",
       "0.00023645391595279223\n",
-      "0.0002324427913961612\n",
+      "0.00023244279139616122\n",
       "0.00022849429549262563\n",
-      "0.00022415494609028398\n",
-      "0.00021992880522408425\n",
-      "0.0002151261579320435\n",
+      "0.000224154946090284\n",
+      "0.00021992880522408423\n",
+      "0.00021512615793204347\n",
       "0.00021112664175118356\n",
-      "0.00020805217744270698\n",
-      "0.00020474338345446232\n",
+      "0.000208052177442707\n",
+      "0.00020474338345446234\n",
       "0.00020072304144019672\n",
       "0.00019775908628190988\n",
       "0.00019465371448508102\n",
-      "0.0001917250789086736\n",
-      "0.00018905619608860147\n",
+      "0.00019172507890867358\n",
+      "0.00018905619608860144\n",
       "0.00018583485063236214\n",
-      "0.00018278286577062244\n",
-      "0.00018010769055405368\n",
+      "0.00018278286577062247\n",
+      "0.0001801076905540537\n",
       "0.00017738310919106166\n",
-      "0.00017473395371285798\n",
+      "0.00017473395371285803\n",
       "0.0001727125726534076\n",
       "0.00017047710685367778\n",
       "0.00016821089468757003\n",
       "0.0001659042372877211\n",
       "0.00016407927565906488\n",
       "0.00016247074847690454\n",
-      "0.00016017520523198582\n",
-      "0.0001584427635598067\n",
+      "0.0001601752052319858\n",
+      "0.00015844276355980668\n",
       "0.0001567643486716562\n",
       "0.0001548519720160484\n",
       "0.0001539444764862004\n",
-      "0.0001524270641929177\n",
-      "0.0001502859887951101\n",
+      "0.00015242706419291767\n",
+      "0.00015028598879511014\n",
       "0.00014889764349392524\n",
       "0.00014737156388394115\n",
       "0.00014625559851989025\n",
-      "0.00014485212641908142\n",
+      "0.0001448521264190814\n",
       "0.00014381301362204171\n",
       "0.0001419614668236029\n",
       "0.0001408659763373339\n",
       "0.0001396365178579487\n",
-      "0.00013833145157230093\n",
+      "0.0001383314515723009\n",
       "0.00013735419852379168\n",
       "0.00013624883128071137\n",
       "0.0001348271413493323\n",
-      "0.00013401813438127433\n",
+      "0.0001340181343812743\n",
       "0.00013327402210206197\n",
       "0.00013232118285356898\n",
       "Wrote resulting mesh to Data/901-diffeo-registered.vtk\n"
@@ -1061,13 +1027,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "984f2e1aef574cea902b2723a5b8b4b9",
+       "model_id": "048f1a7e14914b508a81f2ba91ebd808",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1092,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {
     "scrolled": false
    },
@@ -1100,7 +1066,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f07607ec4ebf41f1b8841a67293902e9",
+       "model_id": "a6b99e27bc9e4b4d90333cb3f9fe5f99",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1126,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
