BUG: Minor pytest fixes

--- a/examples/MeshToMeshRegistration.ipynb
+++ b/examples/MeshToMeshRegistration.ipynb
@@ -752,14 +752,14 @@
     }
    ],
    "source": [
-    "progress = FloatProgress(\n",
+    "entropyProgress = FloatProgress(\n",
     "        min=0.0,\n",
     "        max=2000.0,\n",
     "        step=1\n",
     "    )\n",
     "progressBox = HBox([\n",
     "    Label('Register images'),\n",
-    "    progress\n",
+    "    entropyProgress\n",
     "])\n",
     "progressBox"
    ]
@@ -782,7 +782,7 @@
    ],
    "source": [
     "def update_progress():\n",
-    "    progressBox.value = registrar.optimizer.GetCurrentIteration()\n",
+    "    entropyProgress.value = registrar.optimizer.GetCurrentIteration()\n",
     "\n",
     "registrar.optimizer.AddObserver(itk.IterationEvent(),update_progress)"
    ]
