BUG: Display sparse mesh geometries with itkwidgets

--- a/examples/TemplateGenerationIterative.ipynb
+++ b/examples/TemplateGenerationIterative.ipynb
@@ -194,7 +194,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5878ccc89d3d4ef381ee4af94eec7938",
+       "model_id": "c24adb830a56485292265239f102b44e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -284,7 +284,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65f2b495b263498a95754f2ea452b5dd",
+       "model_id": "3023646685ae428b92a13e8378fd0f8b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -407,7 +407,7 @@
    "outputs": [],
    "source": [
     "# visualize with itkwidgets\n",
-    "#view(geometries=meshes)"
+    "#view(geometries=sparse_meshes)"
    ]
   },
   {
@@ -638,7 +638,7 @@
    "outputs": [],
    "source": [
     "# visualize template\n",
-    "# view(geometries=[meshes])"
+    "# view(geometries=sparse_meshes)"
    ]
   }
  ],
