ENH: Add itk-shape dependency to HASI package

--- a/examples/TemplateGenerationIterative.ipynb
+++ b/examples/TemplateGenerationIterative.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This notebook exemplifies one way in which a template mesh atlas can be generated from a collection of segmented binary images. Each binary image of a mouse femur is downsampled to reduce pixel density prior to applying marching cubes to generate a mesh from the binary image. One arbitrary mesh is selected as the template and then registered to and resampled from each original mesh to get a full set of meshes with correspondence points. The meshes are then groupwise registered via procrustes alignment and the mean mesh is taken as the new template. This process is repeated for a fixed number of iterations to get a template mesh atlas that represents the average case of all meshes.\n",
     "\n",
-    "Template generation requires the [ITKShape](https://github.com/slicersalt/ITKShape) Python wrapping to be built for ITK."
+    "This pipeline uses the [ITKShape](https://github.com/slicersalt/ITKShape) module for shape analysis."
    ]
   },
   {
